[package]
name = 'node-template'
version = '3.0.0'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
edition = '2018'
license = 'Unlicense'
publish = false
#repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
build = 'build.rs'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '3.0.0'

[dependencies.node-template-runtime]
path = '../runtime'
version = '3.0.0-monthly-2021-10'

[dependencies.auditor-runtime-rpc]
default-features = false
path = '../pallets/auditor/rpc'
version = '1.0.0'

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
#tag = 'monthly-2021-10'
#version = '4.0.0-dev'
tag = 'v3.0.0'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
#tag = 'monthly-2021-10'
#version = '0.10.0-dev'
tag = 'v3.0.0'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
#tag = 'monthly-2021-10'
#version = '0.10.0-dev'
tag = 'v3.0.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
#tag = 'monthly-2021-10'
#version = '0.10.0-dev'
tag = 'v3.0.0'

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/paritytech/substrate.git'
#tag = 'monthly-2021-10'
#version = '0.10.0-dev'
tag = 'v3.0.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
#tag = 'monthly-2021-10'
#version = '0.10.0-dev'
tag = 'v3.0.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
