[package]
authors = ['Elly Richardson <elly.richardson18@gmail.com>']
description = 'Runtime API for truth eye chain'
edition = '2018'
license = "Apache-2.0"
name = "auditor-pallet-runtime-api"
version = '0.0.1-monthly-2021-10'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[features]
default = ['std']
std = [
    'codec/std',
    'sp-api/std',
]