[package]
authors = ['Elly Richardson <elly.richardson18@gmail.com>']
description = 'Runtime API for truth eye chain'
edition = '2018'
license = "Apache-2.0"
name = "trutheye-auditor-runtime-api"
version = '0.0.1'
readme = "README.md"

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
sp-api = { version = '2.0.0', default-features = false}

[features]
default = ["std"]
std = [
    'codec/std',
    "sp-api/std",
]