[package]
name = "auditor-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
#substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }

[dependencies.auditor-pallet]
default-features = false
path = '../'
version = '3.0.0-monthly-2021-10'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

#[dependencies.substrate-api-client]
#git = "https://github.com/scs/substrate-api-client.git"
#version = '0.6.0'
#tag = 'monthly-2021-10'
