[package]
name = 'auditor-runtime-rpc'
version = '1.0.0'
description = 'RPC for the runtime API auditor pallet.'
authors = ['Elly Richardson']
homepage = 'https://substrate.dev'
edition = '2018'
license = 'Unlicense'
publish = false
#repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'

[dependencies]
parity-util-mem = '0.11.0'

[dependencies.auditor-runtime-api]
default-features = false
path = '../runtime-api'
version = '1.0.0'

[dependencies.auditor-pallet]
default-features = false
path = '../'
version = '3.0.0-monthly-2021-10'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.jsonrpsee]
default-features = false
features = ['server', 'macros']
version = '0.15.1'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-10'
version = '4.0.0-dev'

[dependencies.sp-blockchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-10'
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-10'
version = '6.0.0-dev'

[dependencies.sp-rpc]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-10'
version = '6.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-10'
version = '6.0.0-dev'

[features]
default = ['std']
std = [
    'codec/std',
]